# DiffHydro

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
diffhydro/: __init__.py  utils.py
diffhydro/interp/: cat_interp.py
diffhydro/io/: __init__.py
diffhydro/pipelines/: __init__.py  base_e2e.py  routing_calibration.py  routing_learning.py  routing_runoff_learning.py  runoff_routing.py  utils.py
diffhydro/routing/: __init__.py  lti_router.py
diffhydro/runoff/: lstm.py  runoff.py
diffhydro/structs/: __init__.py  time_series.py
docs/: examples.md  index.md  modules.md  pipelines.md  quickstart.md  structures.md
docs/advanced-usage/: generator-streaming.md  pipeline-fusion.md
docs/core-functionalities/: catchment-interpolation.md  routing.md  runoff.md
docs/core-helper-structures/: joint-sampler.md  timeseriesdf.md
docs/examples/: geoglows.md  jpdh.md  ono-river.md
docs/pipelines/: pipeline-fusion.md  routing-and-runoff-learning.md  routing-calibration.md  routing-parameter-learning.md  simple-simulation.md
docs/stylesheets/: extra.css
examples/: 1. RAPID IO.ipynb  2. Memory Limitations.ipynb  2. Routing Memory Management.ipynb  3. Large Scale Routing Simulation.ipynb  4. Routing Calibration.ipynb  5. Routing Learning.ipynb  6. End-to-end (Runoff + Routing) Learning.ipynb  6. End-to-end Ono river (runoff + routing).ipynb
examples/geoglows/: 1. Simulation.ipynb  2. Calibration.ipynb  3. Learning.ipynb  4. Single VPU.ipynb  utils.py
examples/utils/: download.py  download_s3.py  io.py
