[project]
name = "diffhydro"
version = "0.1.0"
description = "Differentiable hydrological pipelines built on DiffRoute and PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Tristan Hascoet", email = "tristan.hascoet@gmail.com"}
]
keywords = ["hydrology", "pytorch", "differentiable-programming", "routing", "runoff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology"
]
dependencies = [
    "diffroute>=0.1.0",
    "torch>=2.0.0",
    "pandas",
    "numpy",
    "tqdm",
    "xtensor-datatensor"
]

[project.optional-dependencies]
examples = [
    "requests",
    "xarray",
]

[project.urls]
Homepage = "https://github.com/TristHas/DiffHydro"
Repository = "https://github.com/TristHas/DiffHydro"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["diffhydro*"]
